Fix 'DVB transport stream' example URI.

--- a/specs/draft-mcroberts-uri-dvb.html
+++ b/specs/draft-mcroberts-uri-dvb.html
@@ -518,7 +518,7 @@ Examples</h3>
 <p>
 					</p>
 <blockquote class="text"><dl>
-<dt>dvb://1041.10bf</dt>
+<dt>dvb://233a.1041</dt>
 <dd>
 							DVB transport stream
 						
