--- a/specs/draft-mcroberts-nowp.html
+++ b/specs/draft-mcroberts-nowp.html
@@ -321,6 +321,12 @@ Now Playing inquiry response</h3>
 			
 </p>
 <p>
+				Devices SHOULD require clients to authenticate themselves before information
+				may be returned. The details of appropriate authentication mechanisms are
+				outside of the scope of this document.
+			
+</p>
+<p>
 				For the purposes of the NOWP protocol, clients MUST ignore any response body,
 				and MUST NOT follow URIs given in any "Location" response headers which might
 				be returned.
