--- a/specs/draft-mcroberts-remote-pairing.html
+++ b/specs/draft-mcroberts-remote-pairing.html
@@ -337,7 +337,7 @@ Advertisement</h3>
 					of "<tt>remote-pairing</tt>". That is,
 					registrations occur using the name "<tt>_remote-pairing._tcp</tt>"
 					and SHOULD by default be restricted to the link-local
-					scope. Devices SHOULD make the service vailable via both IPv4 and IPv6
+					scope. Devices SHOULD make the service available via both IPv4 and IPv6
 					and advertise the accordingly.
 				
 </p>
